--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,11 @@
 image: Visual Studio 2017
+  
+nuget:
+  disable_publish_on_pr: true
+  
+build:
+  parallel: true
+  verbosity: minimal
 
 before_build:
   - nuget restore
