--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,8 +4,8 @@ nuget:
   disable_publish_on_pr: true
   
 build:
-  parallel: true
-  verbosity: minimal
+  parallel: false
+  verbosity: detailed
 
 before_build:
   - nuget restore
@@ -18,6 +18,7 @@ environment:
 after_test: 
 # generate report for NUnit testing framework:
   - cmd: pwd
+  - cmd: dir ..\..
   - cmd: dir packages
   - cmd: dir packages\OpenCover\4.6.519\tools
   - cmd: dir packages\NUnit.ConsoleRunner\3.9.0\tools
