--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,8 +4,8 @@ nuget:
   disable_publish_on_pr: true
   
 build:
-  parallel: false
-  verbosity: detailed
+  parallel: true
+  verbosity: minimal
   
 environment:
   COVERALLS_REPO_TOKEN:
