--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,10 @@ build:
   parallel: true
   verbosity: minimal
   
+cache:
+  - packages -> **\packages.config  # preserve "packages" directory in the root of build folder but will reset it if packages.config is modified
+  - '%LocalAppData%\NuGet\v3-cache' # NuGet v3  
+  
 environment:
   COVERALLS_REPO_TOKEN:
     secure: 0qr7lRh2yUaR4Hb2JhuNil52sx6glHMreIwvHL9c3hTekyvplMhesTuSuELXDJFT
